Bug 34072 - [EasyHack] "Protected cells can not be modified" using Replace on unprotected cells
Summary: [EasyHack] "Protected cells can not be modified" using Replace on unprotected...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: low normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.5
Keywords: easyHack
Depends on:
Blocks:
 
Reported: 2011-02-09 05:13 UTC by B.J. Herbison
Modified: 2015-12-18 09:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
a proposed patch (2.09 KB, patch)
2011-05-16 19:39 UTC, Takeshi Abe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description B.J. Herbison 2011-02-09 05:13:23 UTC
I enabled protection for a sheet, disabled protection for all cells in the sheet, then protected one cell.

Editing works correctly, but when I use Find & Replace I get the error "Protected cells can not be modified" for all cells in the sheet. When I hand-edit the cell after F&R fails the edit works.

Using Ubuntu 10.10,
Version:
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4, Ubuntu package 1:3.3.0-1maverick1
Comment 1 B.J. Herbison 2011-02-09 06:45:37 UTC
I observed the same behavior on Windows XP.

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 2 Thorsten Behrens (allotropia) 2011-02-09 14:13:57 UTC
Kohei, seems the check is over-zealous here. Does this even qualify as an easy hack?
Comment 3 Kohei Yoshida 2011-02-09 14:24:20 UTC
Yes.  I'm already pretty booked up anyway.  It'd be nice to get some help here.
Comment 4 Takeshi Abe 2011-05-16 19:39:22 UTC
Created attachment 46788 [details]
a proposed patch

Let me propose a patch against master.
It suppresses the error message and detects unprotected cells.
Comment 5 Kohei Yoshida 2011-05-18 11:56:27 UTC
Hello Abe-san,

The patch looked good & pushed to master, though with that extra condition that if statement in ScTable::SearchCell() is starting to look very crowded...  

Anyway, I'll mark this fixed.  Thanks a lot for your patch.
Comment 6 Robinson Tryon (qubit) 2015-12-18 09:57:53 UTC
Migrating Whiteboard tags to Keywords: (EasyHack)
[NinjaEdit]