fdo#34072

replace content in unprotected cells, even if the sheet is protected